fix: leaderboard test